--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     }
   ],
   "main": "./index.js",
-  "directories": {
-    "lib": "."
-  },
   "files": [
     "LICENSE"
   ],
@@ -38,9 +35,12 @@
     "coveralls": "2.11.2",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
-    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-jshint": "0.11.2",
+    "jshint-stylish": "1.0.1",
+    "grunt-lcov-merge": "0.1.2",
     "grunt-mocha-istanbul": "2.3.1",
     "grunt-mocha-test": "0.12.7",
+    
     "sinon": "1.12.2",
     "sinon-chai": "2.6.0"
   },
