--- a/package.json
+++ b/package.json
@@ -32,17 +32,21 @@
   },
   "dependencies": { },
   "devDependencies": {
+    "mongoose": "3.8.9",
     "coveralls": "2.11.2",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-jshint": "0.11.2",
     "jshint-stylish": "1.0.1",
+    "load-grunt-tasks": "3.1.0",
     "grunt-lcov-merge": "0.1.2",
     "grunt-mocha-istanbul": "2.3.1",
     "grunt-mocha-test": "0.12.7",
     
-    "sinon": "1.12.2",
-    "sinon-chai": "2.6.0"
+    "chai": "2.2.0",
+    "sinon": "1.14.1",
+    "sinon-as-promised": "3.0.0",
+    "sinon-chai": "2.7.0"
   },
   "peerDependencies": {
     "mongoose": "^3.8.9"
