--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,5 +1,6 @@
 {
     "node": true, // Enable globals available when code is running inside of the NodeJS runtime environment.
+    "browser": true, // Standard browser globals e.g. `window`, `document`.
     "eqeqeq": true, // Require triple equals i.e. `===`.
     "newcap": true, // Require capitalization of all constructor functions e.g. `new F()`.
     "noarg": true, // Prohibit use of `arguments.caller` and `arguments.callee`.
@@ -10,5 +11,15 @@
     "strict": true, // Require `use strict` pragma in every file.
     "trailing": true, // Prohibit trailing whitespaces.
     "devel": true, // Allow development statements e.g. `console.log();`.
-    "noempty": true // Prohibit use of empty blocks.
+    "noempty": true, // Prohibit use of empty blocks.
+    "expr": true, // Used for Chai
+    "globals": { // Globals variables.
+        /* MOCHA */
+        "describe": false,
+        "it": false,
+        "before": false,
+        "beforeEach": false,
+        "after": false,
+        "afterEach": false
+    }
 }
