--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": { 
     "bluebird": "2.9.25",
-    "lodash": "2.4.1"
+    "lodash": "3.8.0"
   },
   "devDependencies": {
     "mongoose": "3.8.9",
@@ -41,19 +41,15 @@
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-jshint": "0.11.2",
-    "jshint-stylish": "1.0.1",
+    "jshint-stylish": "1.0.2",
     "load-grunt-tasks": "3.1.0",
     "grunt-lcov-merge": "0.1.2",
-    "grunt-mocha-istanbul": "2.3.1",
+    "grunt-mocha-istanbul": "2.4.0",
     "grunt-mocha-test": "0.12.7",
-    
-    "chai": "2.2.0",
-    "sinon": "1.14.1",
-    "sinon-as-promised": "3.0.0",
-    "sinon-chai": "2.7.0"
+    "chai": "2.3.0"
   },
   "peerDependencies": {
-    "mongoose": "^3.8.9"
+    "mongoose": "> 3.5 < 4"
   },
   "readmeFilename": "README.md"
 }
